Update README with screenshots and professional formatting